Nov 16, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation

Nov 16, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update german translation
- add custom arguments for FragOps UT2 mod

Nov 16, 2003: Alex <alex_b@users.sourceforge.net>
- Added Luca Camillo <kamy at tutorials.it> to the help about screen
  for submitted logos

Nov 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for Call of Duty (wine, no official master)
- update docu
- remove useless gamespy game listings
- add note that the savage script has to be modified (needs translation)
- update german translation

Nov 06, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update docu

Nov 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add custom arguments for Death Ball UT2003 mod
- use case insensitive compare for password in ut&co

Oct 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move definition of PACKAGE_DATA_DIR to Makefile.am as recommended in autoconf
  docu

Oct 29, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- additional gametypes for RTCW and ET mods. Thanks Ben Winslow for
  the patch

Oct 28, 2003: Jordi Mallach <jordi@sindominio.net>
- move list of supported languages to po/LINGUAS.

Oct 26, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added kde flag icons
- new splash screen and desktop icons from Luca Camillo <kamy at tutorials.it>
- new directory layout

Oct 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- remove gettext stuff from repository. Instead autogen.sh will run
  gettextize to create the necessary files
- fix alpha threshold when rendering flag icons
- add GTK2 patch from Jochen Baier

Oct 23, 2003: Alex <alex_b@users.sourceforge.net>
- Replaced French translation with new fr.po from
  Michel Briand <michelbriand@free.fr>

Oct 22, 2003: Alex <alex_b@users.sourceforge.net>
- Updated Danish translation with diff file from
  Morten Brix Pedersen (again)

Oct 19, 2003: Alex <alex_b@users.sourceforge.net>