@@ -15,3 +15,19 @@ gametype MHS new extend Q3S
    status packet = \377\377\377\377\002getinfo xxx
    status2 packet = \377\377\377\377\002getstatus xxx
 end
+
+gametype CODS new extend Q3S
+    name = Call of Duty
+    default port = 28960
+    template var = CALLOFDUTY
+    game rule = gamename
+end
+
+gametype CODM new extend Q3M
+    name = Call of Duty Master
+    default port = 20510
+    template var = CODMASTER
+    master protocol = 1
+    master for gametype = CODS
+    master query = full empty
+end
