@@ -1,3 +1,6 @@
+Nov 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- add Call of Duty master from Activision
+
 Nov 16, 2003: Jordi Mallach <jordi@sindominio.net>
 - update Catalan translation
 
